--- a/poker-angular-app/src/app/login/login.component.html
+++ b/poker-angular-app/src/app/login/login.component.html
@@ -30,6 +30,10 @@
                     Login
                 </button>
 
+                <a href="http://localhost:8090/oauth2/authorize/google?redirect_uri=http://localhost:4200/login" class="btn btn-primary">
+                    Google sign in
+                </a>
+
                 
                 <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
             </form>
