--- a/poker-angular-app/src/app/login/login.component.html
+++ b/poker-angular-app/src/app/login/login.component.html
@@ -25,7 +25,7 @@
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
                 </div>
-                <button [disabled]="loading" class="btn btn-primary">
+                <button type='submit' [disabled]="loading" class="btn btn-primary">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
