--- a/poker-angular/src/app/components/login/login.component.html
+++ b/poker-angular/src/app/components/login/login.component.html
@@ -4,11 +4,17 @@
       <form [formGroup]='loginForm' (ngSubmit)='login()'>
         <div class="form-group">
           <label>Username</label>
-          <input type="email" class="form-control" formControlName='email'>
+          <input type="email" class="form-control" [class.is-invalid]='email.touched && email.invalid' formControlName='email'>
+          <div class="invalid-feedback">
+            Please provide username.
+          </div>
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" class="form-control" formControlName='password'>
+          <input type="password" class="form-control" [class.is-invalid]='password.touched && password.invalid' formControlName='password'>
+          <div class="invalid-feedback">
+            Please provide password.
+          </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
         <a style="margin-left: 10px;" href="http://localhost:8090/oauth2/authorize/google?redirect_uri=http://localhost:4200/login" class="btn btn-primary">
